[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/TechTreeFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/GUI/Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/Screens/Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="Settings" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 2 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 257.0
margin_right = 1920.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 322.0
margin_right = 1920.0
margin_bottom = 822.0
rect_min_size = Vector2( 500, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/CenterContainer"]
margin_left = 710.0
margin_right = 1210.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer/CenterContainer/Panel/HBoxContainer"]
margin_left = 50.0
margin_right = 450.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer/Panel/HBoxContainer/MenuButtons"]
margin_top = 214.0
margin_right = 400.0
margin_bottom = 254.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/Panel/HBoxContainer/MenuButtons/MusicContainer"]
margin_left = 281.0
margin_top = 10.0
margin_right = 324.0
margin_bottom = 30.0
text = "Music"

[node name="MusicCheckButton" type="CheckButton" parent="VBoxContainer/CenterContainer/Panel/HBoxContainer/MenuButtons/MusicContainer"]
margin_left = 328.0
margin_right = 400.0
margin_bottom = 40.0

[node name="Back" type="Button" parent="VBoxContainer/CenterContainer/Panel/HBoxContainer/MenuButtons"]
margin_top = 258.0
margin_right = 400.0
margin_bottom = 286.0
text = "Back"
[connection signal="toggled" from="VBoxContainer/CenterContainer/Panel/HBoxContainer/MenuButtons/MusicContainer/MusicCheckButton" to="." method="_on_MusicCheckButton_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Panel/HBoxContainer/MenuButtons/Back" to="." method="_on_Back_pressed"]
